"css files changed"

--- a/app/design/frontend/cottoncamp/categorypage/template/page/html/footer.phtml
+++ b/app/design/frontend/cottoncamp/categorypage/template/page/html/footer.phtml
@@ -24,10 +24,14 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<div class="footer-container">
-    <div class="footer">
-        <?php echo $this->getChildHtml() ?>
-        <p class="bugs"><?php echo $this->__('Help Us to Keep Magento Healthy') ?> - <a href="http://www.magentocommerce.com/bug-tracking" onclick="this.target='_blank'"><strong><?php echo $this->__('Report All Bugs') ?></strong></a> <?php echo $this->__('(ver. %s)', Mage::getVersion()) ?></p>
-        <address><?php echo $this->getCopyright() ?></address>
-    </div>
+<div class="footer-wrapper">
+ <div class="fotter">
+<div class="fotter-right">
+ <?php echo $this->getChildHtml() ?>
+<span><a href="#" ><img src="<?php echo $this->getSkinUrl('images/Facebook.png') ?>" width="15px" /></a>|</span>
+<span><a href="#" ><img src="<?php echo $this->getSkinUrl('images/follow me.png') ?>" width="15px" /></a>|</span>
+<span><a href="#" ><img src="<?php echo $this->getSkinUrl('images/rss.png') ?>" width="15px" /></a></span>
 </div>
+</div>
+</div>
+
