--- a/app/design/frontend/cottoncamp/categorypage/template/page/2columns-right.phtml
+++ b/app/design/frontend/cottoncamp/categorypage/template/page/2columns-right.phtml
@@ -106,9 +106,9 @@
 	</div>
 </div>
         <?php echo $this->getChildHtml('footer') ?>
-        <?php echo $this->getChildHtml('before_body_end') ?>
+        <?php //echo $this->getChildHtml('before_body_end') ?>
     </div>
 </div>
-<?php echo $this->getAbsoluteFooter() ?>
+<?php //echo $this->getAbsoluteFooter() ?>
 </body>
 </html>
