--- a/skin/frontend/cottoncamp/productlist/css/styles.css
+++ b/skin/frontend/cottoncamp/productlist/css/styles.css
@@ -729,7 +729,7 @@ tr.summary-details-excluded { font-style:italic; }
 /* View Type: Grid */
 .products-grid { position:relative; }
 .products-grid.last { border-bottom:0; }
-.products-grid li.item { float:left; width:171px; padding:0 0 50px;border:1px solid #DDD7D7;margin-right:10px;margin-top:10px; }
+.products-grid li.item { float:left; width:171px; padding:0 0 50px;border:1px solid #DDD7D7;margin-right:10px;margin-top:10px;margin-bottom:10px;border-radius:4px 4px 4px 4px; }
 .products-grid .product-image { display:block; width:170px; height:170px;  border-width:1px 1px 1px 0; margin:0 0 10px; }
 .products-grid.first .product-image { border-top:0; }
 .products-grid li.last .product-image { border-right:0; }
